# content-type-identifier

./: MediaType_test.py  setup.cfg
src/media_identifier/: identifier.py
