[metadata]
name = content-type-identifier-JEISSE-ROCHA
version = 0.0.1
author = Jeisse Rocha
author_email = jeisserocha@gmail.com
description = Package that helps identify what type of content is for a given file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jeisse/content-type-identifier.git
project_urls =
    Bug Tracker = https://github.com/Jeisse/content-type-identifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = srcv